fix for checked exception in mind map panel